--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -128,12 +128,10 @@
     
     	<footer class="bg-dark mt-3 p-3 text-center" style="color: #FFFFFF;">
   			<div class="row">
-    			<div class="col-2"><a href="#"></a>이용약관</div>
-   				<div class="col-2"><a href="#"></a>개인정보처리방침</div>
-    			<div class="col-2"><a href="#"></a>커뮤니티이용규칙</div>
-    			<div class="col-2"><a href="#"></a>공지사항</div>
-    			<div class="col-2"><a href="#"></a>문의하기</div>
-    			<div class="col-2">(주)나만따라YU</div>
+    			<div class="col-3"><a href="footer1.html">이용약관</a></div>
+    			<div class="col-3"><a href="footer2.html">개인정보처리방침</a></div>
+    			<div class="col-3"><a href="footer3.html">커뮤니티이용규칙</a></div>
+    			<div class="col-3"><a href="login.html">(주)나만따라YU</a></div>
   			</div>
 		</footer>
 
