--- a/src/main/resources/templates/studentInfo/studentRegistration.html
+++ b/src/main/resources/templates/studentInfo/studentRegistration.html
@@ -5,228 +5,107 @@
 	<title>YU Main</title>
 </th:block>
 
-<th:block layout:fragment="middle">
-    <div th:if="${studentInfo} == null" class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-      aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">최초 로그인창</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <h5>최초 로그인시 입력이 필요합니다!</h5>
-              <h5>입력하신 정보는 "내 정보"에서 수정가능합니다.</h5>
-          <form id="infoForm" name="infoForm" onSubmit='return dataSend()' method="post">
-             <fieldset>
-              	<div class="form-group" style="display:none">
-					<input type="hidden" id="sid" name="sid" class="form-control" th:value="${userSid}" required="required" readonly/>
-				</div>
-				
-				<div class="form-group">
-					<label for="department" class="col-form-label"><h5>학과</h5></label>
-					<input type="text" id="department" name="department" class="form-control" placeholder="학과 입력" required="required"/>
-				</div>
-				
-                <div class="form-group">
-                  <label for="nickName" class="col-form-label"><h5>닉네임</h5></label>
-                  <input type="text" id="nickname" name="nickname" class="form-control" placeholder="닉네임 입력" required="required" />
-                </div>
-                
-                <div class="form-group">
-                  <label for="yourEmail" class="col-form-label"><h5>이메일</h5></label>
-                  <input type="text" id="email" name="email" class="form-control" placeholder="이메일 입력" required="required"/>
-                </div>
-
-				<div class="form-group">
-						<label for="phoneNumber" class="col-form-label"><h5>휴대폰 번호</h5></label>
-						<input type="text" id="phonenum" name="phonenum" class="form-control" placeholder="번호 입력" required="required"/>
-						<button type="button" id="sendPhoneNumber" class="btn btn-primary">인증받기</button>
-				</div>
-				
-
-				<div class="form-group">
-					<label for="certificationNumber" class="col-form-label"><h5>인증 번호</h5></label>
-					<input type="text" id="CertifiedNumber" class="form-control" placeholder="인증번호 입력" required="required"/>
-					<button type="button" id="checkBtn" class="btn btn-primary">체크</button>
-				</div>
-
-              
-              <br><br>
-              <p><h5>성별</h5></p>
-                <div class="custom-control custom-radio custom-control-inline">
-                  <input type="radio" class="custom-control-input" id="genM" name="gen" value="M" required="required">
-                        <label class="custom-control-label" for="gender-1">남자  </label>
-                </div>
-                <div class="custom custom-radio custom-control-inline">
-                  <input type="radio" class="custom-control-input" id="genF" name="gen" value="F" required="required">
-                        <label class="custom-control-label" for="gender-2">여자</label>
-                </div>
-              <p><h5>학년</h5></p>
-                <div class="custom-control custom-radio custom-control-inline">
-                  <input type="radio" class="custom-control-input" id="syear1" name="syear" value="1" required="required">
-                  <label class="custom-control-label" for="grade-1">1</label>
-                </div>
-                <div class="custom-control custom-radio custom-control-inline">
-                  <input type="radio" class="custom-control-input" id="syear2" name="syear" value="2" required="required">
-                  <label class="custom-control-label" for="grade-2">2</label>
-                </div>
-                <div class="custom-control custom-radio custom-control-inline">
-                  <input type="radio" class="custom-control-input" id="syear3" name="syear" value="3" required="required">
-                  <label class="custom-control-label" for="grade-3">3</label>
-                </div>
-                <div class="custom-control custom-radio custom-control-inline">
-                  <input type="radio" class="custom-control-input" id="syear4" name="syear" value="4" required="required">
-                  <label class="custom-control-label" for="grade-4">4</label>
-                </div>
-               <div class="modal-footer">
-                  <button type="submit" class="btn btn-primary" data-dismiss="modal">등록</button>
-              </div>
-              </fieldset>
-           </form>
-            <!--    <div class="custom-control custom-radio custom-control-inline">
-                  <input type="radio" name="job" id="job-1" class="custom-control-input">
-                  <label class="custom-control-label" for="job-1">대학생</label>
-                </div>
-                <div class="custom-control custom-radio custom-control-inline">
-                  <input type="radio" name="job" id="job-2" class="custom-control-input">
-                  <label class="custom-control-label" for="job-2">대학원생</label>
-                </div>
-                <div class="custom-control custom-radio custom-control-inline">
-                  <input type="radio" name="job" id="job-3" class="custom-control-input">
-                  <label class="custom-control-label" for="job-3">졸업생</label>
-                </div>-->
-            </div>
+<th:block layout:fragment="article">
+      <div th:if="${studentInfo} == null">
+        <div class="container-fluid">
+        <div class="card bg-light mt-3">
+          <div class="card-header bg-light">
+            <h2>최초 로그인</h2>
+            <br>
+            <div class="row">
+              <div class="col-8 text-left">최초 로그인시 입력이 필요합니다! </div>
+              <div class="col-8 text-left">입력하신 정보는 "내 정보"에서 수정가능합니다.</div>
             </div>
           </div>
-        </div>
-</th:block>
+         <form id="infoForm" name="infoForm" onSubmit='return dataSend()' method="post">
+         	<input type="hidden" id="sid" name="sid" class="form-control" th:value="${userSid}" required="required" readonly/>
+          <div class="card-header bg-light">
+            <div class="row">
+              <div class="form-group">
+                  <label for="department" class="col-form-label"><h5>학과</h5></label>
+                  <input type="text" id="department" name="department" class="form-control" placeholder="학과 입력" required="required"/>
+              </div>
+            </div>
+          </div>
+          <div class="card-header bg-light">
+            <div class="row">
+              <div class="form-group">
+                  <label for="nickName" class="col-form-label"><h5>닉네임</h5></label>
+                  <input type="text" id="nickname" name="nickname" class="form-control" placeholder="닉네임 입력" required="required"/>
+              </div>
+            </div>
+          </div>
+          <div class="card-header bg-light">
+            <div class="row">
+              <div class="form-group">
+                  <label for="yourEmail" class="col-form-label"><h5>이메일</h5></label>
+                   <input type="text" id="email" name="email" class="form-control" placeholder="이메일 입력" required="required"/>
+              </div>
+            </div>
+          </div>
 
-<th:block layout:fragment="article">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col">
-          <table class="table table-hover">
-            <thead>
-            <tr>
-              <th scope="col" style="color:#0D3F7A">최근 등록된 매칭</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <th scope="row">1</th>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-            </tr>
-            <tr>
-              <th scope="row">4</th>
-            </tr>
-            <tr>
-              <th scope="row">5</th>
-            </tr>
-            <tr>
-              <th scope="row">6</th>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="col">
-          <table class="table table-hover">
-            <thead>
-            <tr>
-              <th scope="col" style="color:#0D3F7A">실시간 검색어</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <th scope="row">1</th>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-            </tr>
-            <tr>
-              <th scope="row">4</th>
-            </tr>
-            <tr>
-              <th scope="row">5</th>
-            </tr>
-            <tr>
-              <th scope="row">6</th>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="w-100"></div>
-        <div class="col">
-          <table class="table table-hover">
-            <thead>
-            <tr>
-              <th scope="col" style="color:#0D3F7A">Hot 게시물</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <th scope="row">1</th>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-            </tr>
-            <tr>
-              <th scope="row">4</th>
-            </tr>
-            <tr>
-              <th scope="row">5</th>
-            </tr>
-            <tr>
-              <th scope="row">6</th>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="col">
-          <table class="table table-hover">
-            <thead>
-            <tr>
-              <th scope="col" style="color:#0D3F7A">학과 강의평가</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <th scope="row">1</th>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-            </tr>
-            <tr>
-              <th scope="row">4</th>
-            </tr>
-            <tr>
-              <th scope="row">5</th>
-            </tr>
-            <tr>
-              <th scope="row">6</th>
-            </tr>
-            </tbody>
-          </table>
+          <div class="card-header bg-light">
+            <div class="row">
+              <div class="form-group">
+                <label for="phoneNumber" class="col-form-label"><h5>휴대폰 번호</h5></label>
+                <input type="text" id="phonenum" name="phonenum" class="form-control" placeholder="번호 입력" required="required"/>
+                <button type="button" id="sendPhoneNumber" class="btn btn-primary">인증받기</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-header bg-light">
+            <div class="row">
+              <div class="form-group">
+                <label for="certificationNumber" class="col-form-label"><h5>인증 번호</h5></label>
+                <input type="text" id="CertifiedNumber" class="form-control" placeholder="인증번호 입력" required="required"/>
+                <button type="button" id="checkBtn" class="btn btn-primary">체크</button>
+              </div>
+            </div>
+          </div>
+          <div class="card-header bg-light">
+            <div class="row">
+              <div class="form-group">
+                <div class="input-group mb-3">
+                  <div class="input-group-append">
+                    <label class="input-group-text" for="gender">성별</label>
+                  </div>
+                  <select class="custom-select" id="gen" name="gen">
+                    <option value="select" selected>성별을 선택해주세요</option>
+                    <option value="M">남자</option>
+                    <option value="F">여자</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card-header bg-light">
+            <div class="row">
+              <div class="form-group">
+                <div class="input-group mb-3">
+                  <div class="input-group-append bg-light">
+                    <label class="input-group-text" for="grade">학년</label>
+                  </div>
+                  <select class="custom-select" id="syear" name="syear">
+                    <option value="select" selected>학년을 선택해주세요</option>
+                    <option value="1">1학년</option>
+                    <option value="2">2학년</option>
+                    <option value="3">3학년</option>
+                    <option value="4">4학년</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <div id="button_group" class="btn-form">
+              <button type="submit" class="btn btn-primary float-right" style="margin-right:5px;">등록</button>
+              <button class="btn btn-primary float-right" style="margin-right:5px;" onclick="location.href='/yu/logout'">취소</button>
+            </div>
+          </div>
+		</form>
         </div>
       </div>
     </div>
-</th:block>
+</th:block> 
 
 <th:block layout:fragment="script">
 <script type="text/javascript">
@@ -242,6 +121,25 @@
        	 result:data
    	};*/
    	//alert(queryString);
+   		var gen = $("#gen");
+   		var syear = $("#syear");
+   		
+   		if($("#nickname").val().length < 2) {
+   			alert("닉네임은 2자 이상 12자 이하 입니다");
+   			$("#nickname").focus();
+   			return false;
+   		}
+   		else if(gen.val() == "select") {
+   			alert("성별을 선택해 주세요");
+   			gen.focus();
+   			return false;
+   		}
+   		else if(syear.val() == "select") {
+   			alert("학년을 선택해 주세요");
+   			syear.focus();
+   			return false;
+   		}
+   	
 		if(!$('#CertifiedNumber').prop("readonly")){
 			alert("휴대폰 인증을해주세요");
 			return false;
@@ -263,7 +161,7 @@
     	    success : function(data){
     	    	if(data == true) {
     	        	alert("등록 성공, 재로그인 해주세요.");
-    	        	location.href='/yu/index';
+    	        	location.href='/yu/logout';
     	    	}
     	    	else
     	    		alert("등록 실패");
@@ -293,7 +191,6 @@
 			contentType: "application/x-www-form-urlencoded; charset=UTF-8",
 			success: function(res){
 				$('#checkBtn').click(function(){
-					alert(res);
 					if(res ==$('#CertifiedNumber').val()){
 						alert("인증성공");
 						$('#CertifiedNumber').attr("readonly",true);
