--- a/src/main/resources/templates/studentInfo/studentMyCommentList.html
+++ b/src/main/resources/templates/studentInfo/studentMyCommentList.html
@@ -98,6 +98,18 @@
             location.href = "/yu/studentInfo/studentMyCommentList?" + "page=" + (pageNum + nextOrPrev);
             return true;
         }
+        
+    	if([[${myCommentList.getTotalElements()}]] == 0) {
+    		var tr = document.createElement("tr");
+    		var th = document.createElement("th");
+    		
+    		th.colSpan = 3;
+    		th.style.fontSize = "15px";
+    		th.style.textAlign = "center";
+    		th.innerHTML = "등록된 글이 없습니다";
+    		tr.appendChild(th);
+    		$("#tbody").append(tr);
+    	}
     </script>
 </th:block>
 </html>
