--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -97,7 +97,7 @@
         		</li>
 
         		<li class="nav-item">
-          			<a class="nav-link" tabindex="-1" aria-disabled="true">시간표</a>
+          			<a class="nav-link" tabindex="-1" aria-disabled="true" href="/yu/schedule/main">시간표</a>
         		</li>
         		<li class="nav-item">
         			<a class="nav-link" tabindex="-1" aria-disabled="true">강의평가</a>
@@ -127,12 +127,12 @@
     	<br>
     
     	<footer class="bg-dark mt-3 p-3 text-center" style="color: #FFFFFF;">
-  			<div class="row">
-    			<div class="col-3"><a href="footer1.html">이용약관</a></div>
-    			<div class="col-3"><a href="footer2.html">개인정보처리방침</a></div>
-    			<div class="col-3"><a href="footer3.html">커뮤니티이용규칙</a></div>
-    			<div class="col-3"><a href="login.html">(주)나만따라YU</a></div>
-  			</div>
+			<div class="row">
+                <div class="col-3"><a href="/yu/home/footer1">이용약관</a></div>
+                <div class="col-3"><a href="/yu/home/footer2">개인정보처리방침</a></div>
+                <div class="col-3"><a href="/yu/home/footer3">커뮤니티이용규칙</a></div>
+                <div class="col-3"><a href="/yu/login">(주)나만따라YU</a></div>
+             </div>
 		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
