--- a/src/main/resources/templates/matching/matchingList.html
+++ b/src/main/resources/templates/matching/matchingList.html
@@ -109,6 +109,17 @@
 
 <th:block layout:fragment="script">
     <script>
+        if([[${matchingList.getTotalElements()}]] == 0) {
+            var tr = document.createElement("tr");
+            var th = document.createElement("th");
+
+            th.colSpan = 7;
+            th.style.fontSize = "15px";
+            th.style.textAlign = "center";
+            th.innerHTML = "등록된 글이 없습니다";
+            tr.appendChild(th);
+            $("#tbody").append(tr);
+        }
         function getParameterByName(name) {
             name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
             var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
