--- a/src/main/resources/templates/studentInfo/studentInfo.html
+++ b/src/main/resources/templates/studentInfo/studentInfo.html
@@ -113,7 +113,7 @@
                   </div>
                 </div>
               </div>
-              <a href="#" class="btn btn-primary float-right">수정하기</a>
+              <a href="#" class="btn btn-primary float-right">수정하</a>
             </div>
             <div class="tab-pane" id="history">
               <!--활동기록-->
