--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -10995,4 +10995,22 @@ button.close4 {
   padding: 0;
   margin: 10px 0;
 }
+
+button.close5 {
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+}
+
+.comment-button .btn-red , .btn-red {
+  width: 85px;
+  height: 40px;
+  border-radius: 5px;
+  font-size: 15px;
+  border-style: solid;
+  font-weight: bold;
+  background: #fff;
+  border-color: #ff0000;
+  color: #ff0000;
+}
 /*# sourceMappingURL=bootstrap.css.map */
