--- a/src/main/resources/templates/studentInfo/studentInfo.html
+++ b/src/main/resources/templates/studentInfo/studentInfo.html
@@ -98,7 +98,6 @@
           </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn-red">탈퇴하기</button>
             <div class="float-right">
               <button type="button" class="btn-blue" data-dismiss="modal" onClick="return updateNickNameOrEmail();">수정하기</button>
             </div>
@@ -146,6 +145,9 @@
                     <p class="card-text text-left">비밀번호 변경: <a style="text-decoration:underline" href="https://adm.yu.ac.kr/com/com/port/plet/findPortPwdInitFormN_L_S.do">yu.ac.kr//PasswordChange</a></p>
                   </div>
                 </div>
+              </div>
+              <div class="float-left" style="margin-bottom:10px; margin-left:10px;">
+                <button type="button" class="btn-blue" id="modalbtn5">탈퇴하기</button>
               </div>
               <div class="float-right" style="margin-bottom:10px; margin-right:10px;">
                   <button type="button" class="btn-blue" id="modalbtn5">수정하기</button>
