--- a/src/main/resources/templates/studentInfo/studentInfo.html
+++ b/src/main/resources/templates/studentInfo/studentInfo.html
@@ -147,7 +147,7 @@
                 </div>
               </div>
               <div class="float-left" style="margin-bottom:10px; margin-left:10px;">
-                <button type="button" class="btn-blue" id="modalbtn5">탈퇴하기</button>
+                <button type="button" class="btn-red" id="secession">탈퇴하기</button>
               </div>
               <div class="float-right" style="margin-bottom:10px; margin-right:10px;">
                   <button type="button" class="btn-blue" id="modalbtn5">수정하기</button>
