--- a/src/main/resources/templates/schedule/contentSearch.html
+++ b/src/main/resources/templates/schedule/contentSearch.html
@@ -193,7 +193,7 @@
             //alert(rf);
             //alert(rr);
 
-            var top=(ff-8)*50+fr/60*50+50;
+            var top=(ff-8)*50+fr/60*50-50;
             var height=((rf-8)*50+rr/60*50)-((ff-8)*50+fr/60*50);
 
             top+="";
@@ -244,7 +244,7 @@
             //alert(rf);
             //alert(rr);
 
-            top=(ff-8)*50+fr/60*50+50;
+            top=(ff-8)*50+fr/60*50-50;
             height=((rf-8)*50+rr/60*50)-((ff-8)*50+fr/60*50);
 
             top+="";
