--- a/src/main/resources/templates/schedule/schedulemain.html
+++ b/src/main/resources/templates/schedule/schedulemain.html
@@ -1,54 +1,70 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
-        <th:block layout:fragment="title">
+<th:block layout:fragment="title">
     <title>YU Student Schedule</title>
 
     <style>
-        .tablebody{
-            overflow:scroll;
-        }
-        .time{
-            border:1px solid black;
-            height:50px;
-            width:70px;
-            line-height: 50px;
-        }
+
         .grid{
-            border:1px solid black;
+            border:1px solid grey;
             height:50px;
-            width:150px;
             z-inde:0;
         }
         .month{
-            border:1px solid black;
-            background-color: #90a4ae;
+            border: 1px solid grey;
+            background-color: #3c4790;
             height:50px;
-            width:150px;
             line-height: 50px;
             text-align: center;
             font-weight: bold;
-        }
-        .wrap{
-            position:relative;
-            left:350px;
+            color: #fff;
         }
         .mysubject{
             position:absolute;
             z-index:10;
             border:1px solid black;
-            width:150px;
+            width:19%;
             background-color: #00aeff;
         }
 
+        .schedule-header-form {
+            position: relative;
+            margin: 0;
+            padding: 0;
+        }
+
+        .schedule-header-form .month:first-child {
+            width: 10%;
+        }
+
+        .schedule-header-form .month {
+            width: 18%;
+        }
+
+        .schedule-content-form th {
+            padding: 0;
+            margin: 0;
+            width: 10%;
+        }
+
+        .schedule-content-form td {
+            padding: 0;
+            margin: 0;
+            width: 18%;
+        }
+        .schedule-content-form .time {
+            height:50px;
+            border: 1px solid grey;
+            text-align: center;
+            line-height: 50px;
+            font-size: 1vw;
+        }
 
     </style>
 </th:block>
 
 <th:block layout:fragment="article">
-
-
-
 
     <div id="data" style="display:none;">
         <div id="title"></div>
@@ -63,53 +79,51 @@
 
 
     <button id="create">저장</button>
-
     <button id="delete">제거</button>
-    <a th:href="@{/schedule/contentSearch}" th:onclick="  window.open(this.href, '_blank', 'width=1000px,height=500px,toolbars=no,scrollbars=yes');  return false;">수업 목록에서 검색</a>
+    <a th:href="@{/schedule/contentSearch}" th:onclick="window.open(this.href, '_blank', 'width=1000px,height=500px,toolbars=no,scrollbars=yes');  return false;">수업 목록에서 검색</a>
 
-    <div class="wrap">
-        <div class="tablehead">
-            <table class="tablehead"><tbody>
-            <tr><th style="border:1px solid black;height:50px;width:70px;line-height: 50px;"></th>
-                <td class="month">월</td>
-                <td class="month">화</td>
-                <td class="month">수</td>
-                <td class="month">목</td>
-                <td class="month">금</td>
-                <td style="display: none;">토</td>
-                <td style="display: none;">일</td>
-                <th></th></tr></tbody></table></div>
 
-        <div class="tablebody">
-            <table class="tablebody">
+    <div class="container-fluid">
+        <div class="col-sm-auto">
+            <table class="schedule-header-form table">
                 <tbody>
-
                 <tr>
-                    <th><div class="times" style=""><!--17개-->
-                        <div class="time">오전 8시</div>
-                        <div class="time">오전 9시</div>
-                        <div class="time">오전 10시</div>
-                        <div class="time">오전 11시</div>
-                        <div class="time">오후 12시</div>
-                        <div class="time">오후 1시</div>
-                        <div class="time">오후 2시</div>
-                        <div class="time">오후 3시</div>
-                        <div class="time">오후 4시</div>
-                        <div class="time">오후 5시</div>
-                        <div class="time">오후 6시</div>
-                        <div class="time">오후 7시</div>
-                        <div class="time">오후 8시</div>
-                        <div class="time">오후 9시</div>
-                        <div class="time">오후 10시</div>
-                        <div class="time">오후 11시</div>
-                        <div class="time">오후 12시</div>
-                    </div>
+                    <td class="month"></td>
+                    <td class="month">월</td>
+                    <td class="month">화</td>
+                    <td class="month">수</td>
+                    <td class="month">목</td>
+                    <td class="month">금</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
 
+        <div class="col-sm-auto">
+            <table class="schedule-content-form table">
+                <tbody>
+                <tr>
+                    <th>
+                        <div class="times">
+                            <div class="time">오전 9시</div>
+                            <div class="time">오전 10시</div>
+                            <div class="time">오전 11시</div>
+                            <div class="time">오후 12시</div>
+                            <div class="time">오후 1시</div>
+                            <div class="time">오후 2시</div>
+                            <div class="time">오후 3시</div>
+                            <div class="time">오후 4시</div>
+                            <div class="time">오후 5시</div>
+                            <div class="time">오후 6시</div>
+                            <div class="time">오후 7시</div>
+                            <div class="time">오후 8시</div>
+                            <div class="time">오후 9시</div>
+                            <div class="time">오후 10시</div>
+                        </div>
                     </th>
 
-                    <td><!--월-->
-                        <div class="cols" id="cols0">
-                        </div>
+                    <td>
+                        <div class="cols" id="cols0"></div>
                         <div class="grids"></div>
                         <div class="grid"></div>
                         <div class="grid"></div>
@@ -125,30 +139,90 @@
                         <div class="grid"></div>
                         <div class="grid"></div>
                         <div class="grid"></div>
+                    </td>
+
+                    <td>
+                        <div class="cols" id="cols1"></div>
+                        <div class="grids"></div>
                         <div class="grid"></div>
                         <div class="grid"></div>
                         <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
                     </td>
 
-                    <td><!--화-->
-                        <div class="cols" id="cols1"></div><div class="grids"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div>
+                    <td>
+                        <div class="cols" id="cols2"></div>
+                        <div class="grids"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
                     </td>
 
-                    <td><!--수-->
-                        <div class="cols" id="cols2"></div><div class="grids"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div>
+                    <td>
+                        <div class="cols" id="cols3"></div>
+                        <div class="grids"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
                     </td>
 
-                    <td><!--목-->
-                    <div class="cols" id="cols3"></div><div class="grids"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div>
+                    <td>
+                        <div class="cols" id="cols4"></div>
+                        <div class="grids"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
+                        <div class="grid"></div>
                     </td>
-
-                    <td><!--금-->
-                    <div class="cols" id="cols4"></div><div class="grids"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div><div class="grid"></div>
-                    </td>
-
-
-                </tr></tbody></table><div class="nontimes"></div></div>
+                </tr>
+                </tbody>
+            </table>
+            <div class="nontimes"></div>
+        </div>
     </div>
+
 
 </th:block>
 
@@ -163,62 +237,61 @@
                 cache:false}).done(function (a) {
 
 
-                    var temp=a.split("!");
+                var temp=a.split("!");
 
-                   // alert(temp[temp.length-2]);
+                for(i=0;i<temp.length-1;i++)
+                {
 
-               for(i=0;i<temp.length-1;i++)
-               {
+                    var itemp=temp[i].split("*");
 
-                   var itemp=temp[i].split("*");
+                    $("#title").text(itemp[0]);
+                    $("#profname").text(itemp[1]);
+                    $("#placename").text(itemp[2]);
+                    $("#colornum").text("#"+itemp[3]);
+                    $("#topnum").text(itemp[4]);
+                    $("#heightnum").text(itemp[5]);
+                    $("#coursenum").text(itemp[6]);
+                    $("#dayid").text(itemp[7]);
+                    createobject();
 
-
-/*
-                   if(i==temp.length-1)
-                   {
-                       alert(itemp[0]);
-                       alert(itemp[1]);
-                       alert(itemp[2]);
-                       alert(itemp[3]);
-                       alert(itemp[4]);
-                       alert(itemp[5]);
-                       alert(itemp[6]);
-                       alert(itemp[7]);
-
-                   }*/
-
-                       $("#title").text(itemp[0]);
-                       $("#profname").text(itemp[1]);
-                       $("#placename").text(itemp[2]);
-                       $("#colornum").text("#"+itemp[3]);
-                       $("#topnum").text(itemp[4]);
-                       $("#heightnum").text(itemp[5]);
-                       $("#coursenum").text(itemp[6]);
-                       $("#dayid").text(itemp[7]);
-                   createobject();
-
-               }
+                }
             });});
-
-
 
         var list= new Array();
         var clickEle = $('#create');
         clickEle.click(function () {
 
-            for(var i=0;i<list.length;i++){
+
+            var sid;
+            $.ajax({
+                url : "/schedule/deleteload",
+                type :"get",
+                data :"date=a" ,
+                cache:false}).done(function (a) {
 
                 $.ajax({
-                    url : "/schedule/save",
-                    type : "get",
-                    data : "title=" + list[i].get("title")+"&profname="+list[i].get("profname")+"&placename="+list[i].get("placename"+"")+"&colornum=" + list[i].get("colornum").substr(1)+"&topnum="+list[i].get("topnum")+"&heightnum="+list[i].get("heightnum")+"&coursenum="+list[i].get("coursenum")+"&dayid="+list[i].get("dayid"),
-                    cache:false}).done(function () {
+                    url : "/schedule/delete",
+                    type :"get",
+                    data :"sid="+a ,
+                    cache:false}).done(function (aa) {
+
+                    for(var i=0;i<list.length;i++){
+
+                        $.ajax({
+                            url : "/schedule/save",
+                            type : "get",
+                            data : "title=" + list[i].get("title")+"&profname="+list[i].get("profname")+"&placename="+list[i].get("placename"+"")+"&colornum=" + list[i].get("colornum").substr(1)+"&topnum="+list[i].get("topnum")+"&heightnum="+list[i].get("heightnum")+"&coursenum="+list[i].get("coursenum")+"&dayid="+list[i].get("dayid"),
+                            cache:false}).done(function () {
+
+                        });
+
+                    }
 
                 });
 
-            }
-        });
+            });
 
+        });
 
         var clickEle = $('#delete');
         clickEle.click(function () {
@@ -244,40 +317,15 @@
                 //alert(sid);
             });
 
-
-
             list=[];
 
-
-
-            //alert("dd");
-            //$('ul').children('li:eq(0)');
-          //  $('#cols0').children().remove();
-
-            //alert($('.mysubject').text())
-            //alert($('#cols0').children('div:eq(0)').text());
-           $('#cols0').children('div').remove();
+            $('#cols0').children('div').remove();
             $('#cols1').children('div').remove();
             $('#cols2').children('div').remove();
             $('#cols3').children('div').remove();
             $('#cols4').children('div').remove();
 
         });
-
-/*
-        var clickEle = $('#create');
-        clickEle.click(function () {
-
-            alert("dd");
-            /!*<div class="mysubject"
-                 style="position:absolute;z-index:10;border:1px solid black;height:50px;width:100px; background-color: #00aeff; top:300px; ">물리 101호 김명진</div>
-        </div><!--실질적으로 과목이 들어오는 칸, 셀렉되면 이칸으로 이 div안에 또 div가 들어옴.-->
-*!/
-            var str="<div class='mysubject'style='position:absolute;z-index:10;border:1px solid black;height:50px;width:100px; background-color: #00aeff; top:300px; '>물리 101호 김명진</div>"
-
-            $('#cols0').append(str);
-
-        });*/
 
         function createobject() {
 
@@ -293,24 +341,15 @@
             max.set("dayid", $('#dayid').text());
             list.push(max);
 
-
-
-
-            var str = "<div class='mysubject'style='" +"position:absolute;z-index:10;border:1px solid black;width:150px;background-color:"+$('#colornum').text()+
+            var str = "<div class='mysubject'style='" +"position:absolute;z-index:10;border:1px solid black;width:19%;background-color:"+$('#colornum').text()+
                 ";top:"+$('#topnum').text() +"px;"+"height:"+$('#heightnum').text()+"px;'>"+$('#title').text() +$('#profname').text()+$('#placename').text()+"</div>";
 
 
             var distinguish ='#'+$('#dayid').text();
 
-
-           // alert(distinguish);
             $(distinguish).append(str);
-
         }
 
-
-
-
-        </script>
+    </script>
 </th:block>
 </html>
