--- a/src/main/resources/templates/schedule/contentSearch.html
+++ b/src/main/resources/templates/schedule/contentSearch.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <th:block layout:fragment="title">
-	<title>YU Search Schedule</title>
+   <title>YU Search Schedule</title>
 </th:block>
 
 <th:block layout:fragment="article">
@@ -104,11 +104,11 @@
 </th:block>
 
 <th:block layout:fragment="script">
-		<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" ></script>
-    	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    	<script th:src="@{/js/bootstrap.js}"></script>
-    	<script type="text/javascript">
+      <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" ></script>
+       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+       <script th:src="@{/js/bootstrap.js}"></script>
+       <script type="text/javascript">
         $(document).ready(function() {
 
             $.ajax({
@@ -193,7 +193,7 @@
             //alert(rf);
             //alert(rr);
 
-            var top=(ff-8)*50+fr/60*50+50;
+            var top=(ff-8)*50+fr/60*50-50;
             var height=((rf-8)*50+rr/60*50)-((ff-8)*50+fr/60*50);
 
             top+="";
@@ -244,7 +244,7 @@
             //alert(rf);
             //alert(rr);
 
-            top=(ff-8)*50+fr/60*50+50;
+            top=(ff-8)*50+fr/60*50-50;
             height=((rf-8)*50+rr/60*50)-((ff-8)*50+fr/60*50);
 
             top+="";
