--- a/src/main/resources/templates/studentInfo/studentInfo.html
+++ b/src/main/resources/templates/studentInfo/studentInfo.html
@@ -108,7 +108,6 @@
 </th:block>
 
 <th:block layout:fragment="article">
-    <div id="article">
       <div class="container-fluid">
         <div class="card text-center mb-3">
           <div class="card-header">
@@ -133,7 +132,19 @@
               <div class="card-body">
                 <div class="row">
                   <div class="col-md-2">
-                    <img src="" class="card-img">
+                  	<div class="row row-cols-1">
+                  		<div class="col">
+                    		<img th:src="@{/images/영대마크.png}" style="width:180px;height:240px;" class="card-img">
+                    	</div>
+                    	 <div class="col">
+							<form id = "imageForm" method="post" enctype="multipart/form-data">
+								<br>
+								<label for="image" style="background-color:#61DBF0;">프로필 이미지</label><br>
+								<input id = "imageFile" name="imageFile" type="file" accept=".jpg, .jpeg, .png, .gif" onChange = "imageCheck(imageFile)"> <br>
+								<a style="font-size:13px">(1MB 이하 / 미등록 가능)<br>(이미지 이름 25자 이내)</a>
+							</form>
+			 			</div>
+                    </div>
                   </div>
                   <div class="col-md-10">
                     <p class="card-text text-left">Lv.7 (640/700)</p>
@@ -298,7 +309,6 @@
           </div>
         </div>
       </div>
-    </div>
 </th:block>
 
   <footer class="bg-dark mt-3 p-3 text-center" style="color: #FFFFFF;">
@@ -477,6 +487,38 @@
                 }
         	});
     	}
+    }
+    
+    function imageCheck(image) {		// 이미지 용량, 확장자 확인
+    	var fileNameCheck = image.value.split(".");
+    	var fileExtension = fileNameCheck[fileNameCheck.length-1].toLowerCase();
+        var fileSize = image.files[0].size;
+        var maxSize = 1 * 1024 * 1024;		// 1MB
+        
+    	if(image.value.length != 0) {
+    		imagePath = image.value.split("\\");
+    		imageName = imagePath[imagePath.length-1];
+    		
+    		if(imageName.length > 25) {
+    			alert("이미지의 이름을 25자 이내로 설정하세요");
+            	image.files[0] = null;
+            	image.value = "";
+    			return false;
+    		}
+    	}
+        if(fileExtension != "gif" && fileExtension != "png" && fileExtension != "jpg" && fileExtension != "jpeg") {
+        	alert("지원하지 않는 확장자 입니다");
+        	image.files[0] = null;
+        	image.value = "";
+        	return false;
+        }
+        if(fileSize > maxSize) {
+        	alert("이미지 크기는 1MB 이하입니다");
+        	image.files[0] = null;
+        	image.value = "";
+           	return false;
+        }
+       	return true;
     }
   </script>
 </th:block>
