--- a/src/main/resources/templates/board/boardUpdate.html
+++ b/src/main/resources/templates/board/boardUpdate.html
@@ -82,13 +82,19 @@
             return false;
         }
         
-        var a=[[${board.getBoardtype()}]];
-        $("#"+a).attr("selected","selected");
+        var type = "[[${board.getBoardtype()}]]";
+        $("#"+type).attr("selected","selected");
         
         function cancel() {
-        	location.href="/yu/board/boardList?boardtype=" + [[${board.getBoardtype()}]];
+        	location.href="/yu/board/boardList?boardtype=" + "[[${board.getBoardtype()}]]";
         }
+        
+        $(function (){		// ckeditor config
+            CKEDITOR.replace('content', {
+                filebrowserUploadUrl: '/mine/imageUpload.do?' + "board=" + "board" + "&boardtype=" + type 
+                		+ "&sid=" + "[[${studentInfo.getSid()}]]" + "&nickname=" + "[[${studentInfo.getNickname()}]]"
+            });
+        });
     </script>
-    <script th:src="@{/scripts/ckeditor.js}"></script>
 </th:block>
 </html>
